@@ -1051,6 +1051,7 @@ public class StdItem implements Item
 		case CMMsg.TYP_DELICATE_HANDS_ACT:
 		case CMMsg.TYP_JUSTICE:
 		case CMMsg.TYP_WAND_USE:
+		case CMMsg.TYP_ACID: // slime
 		case CMMsg.TYP_FIRE: // lighting
 		case CMMsg.TYP_WATER: // rust
 		case CMMsg.TYP_CAST_SPELL:
