@@ -20,6 +20,12 @@ Example  : cast "acid arrow" orc\n\r\
 This spell will conjur up an arrow of acid, which will hit and splash \
 upon the target, doing additional acid damage each round.
 
+SPELL_ACID_SPRAY=<ABILITY>\
+Usage    : CAST "ACID SPRAY" [TARGET NAME]\n\r\
+Example  : cast "acid spray" orc\n\r\
+This spell will conjur a wide spray of acid, which will hit and splash \
+upon the target, doing additional acid damage each round.
+
 SPELL_ADD_LIMB=<ABILITY>\
 Usage    : CAST "ADD LIMB" [TARGET NAME] \n\r\
 Example  : cast "add limb" bob\n\r\
